deploy/k8s/envoy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: kdvmanager-prod
  labels:
    app: envoy
    release: production
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0 
  selector:
    matchLabels:
      app: envoy
      release: production
  template:
    metadata:
      labels:
        app: envoy
        release: production
    spec:
      serviceAccountName: kdvmanager-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
      - name: envoy
        image: ghcr.io/luuklabs/kdvmanager/envoy:linux-main
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
          - name: https
            containerPort: 443
            protocol: TCP
        resources:
          limits:
            memory: 200Mi
            cpu: 400m
          requests:
            memory: 100Mi
            cpu: 200m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          capabilities:
            drop:
            - ALL
        env:
          - name: ENVOY_UID
            value: "1000"
          - name: ENVOY_GID
            value: "1000"
