deploy/k8s/envoy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443
    protocol: TCP
  selector:
    app: envoy
